--- a/index.css
+++ b/index.css
@@ -1,1 +1,336 @@
-@import"./src/styles/reset.scss";@import"https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap";html{font-family:"Raleway",sans-serif;color:#3f3b38;scroll-behavior:smooth;line-height:1.5}.page{background-color:#fff9ed;position:relative}.page__main{height:100vh}.page__main:before{content:" ";display:block;position:absolute;left:0;top:0;width:100%;height:100%;filter:brightness(1.2) contrast(80%);background-image:url("./src/assets/images/interior.jpg");background-repeat:no-repeat;background-size:cover;background-position:center}.page__header{position:fixed;z-index:20}.header{display:block;font-weight:500;width:100%;padding:10px 0;font-size:30px;-webkit-backdrop-filter:blur(20px);backdrop-filter:blur(20px);background-color:rgba(255,255,255,.5);font-family:"Playfair Display",serif;box-shadow:rgba(73,56,61,.144) 0px 8px 24px}.header__container{max-width:1200px;margin:0 auto;padding:0 15px;box-sizing:content-box}.nav{display:flex;justify-content:space-between}.nav__logo{font-style:italic;margin-right:40px}.nav__link:not(:last-child){margin-right:20px}.main{position:relative}.main__container{max-width:1200px;margin:0 auto;padding:150px 15px;box-sizing:content-box}.main__titleWrapper{position:relative;display:flex;justify-content:center;align-items:center;flex-direction:column}.main__slogan{max-width:800px;font-size:calc((1vh + 1vw)*3);font-weight:500;font-family:"Playfair Display",serif;text-align:center}.main__button{max-width:250px;margin-top:40px;animation:scaleAnimation ease-in-out 2s infinite}.button{display:block;text-align:center;border-radius:40px;color:#fff9ed;font-family:"Raleway",sans-serif;font-size:20px;font-weight:600;cursor:pointer;transition:all ease-out .2s;background-color:#cc9065}.button:hover{background-color:#bf743f}.button:active{transform:scale(1.1)}.button-small{padding:10px 30px}.button-large{padding:20px 30px}.section{padding:50px 0;text-align:center}.section__container{max-width:1200px;margin:0 auto;padding:0 15px;box-sizing:content-box}.section__title{font-size:50px;margin:30px 0}.section__paragraph{font-size:25px;margin:10px 0;font-weight:300}.section__sofas{background-color:rgba(73,134,175,.418)}.section__tables{background-color:rgba(197,133,133,.418)}.section__chairs{background-color:rgba(224,200,118,.418)}.products__title{font-size:35px;text-align:center;margin:20px 0}.products__list{display:flex;flex-direction:row;justify-content:center;flex-wrap:wrap;row-gap:10px;-moz-column-gap:10px;column-gap:10px}.productCard{position:relative;width:230px;background-color:#fff;padding:20px;border-radius:20px;box-shadow:rgba(73,56,61,.144) 0px 8px 24px}.productCard:hover .productCard__image{transform:scale(1.15)}.productCard__wrapper{height:100%;display:flex;flex-direction:column;justify-content:space-between;row-gap:10px}.productCard__imageWrapper{overflow:hidden}.productCard__image{transition:transform .2s;border-radius:10px}.productCard__title{font-size:20px;font-weight:500;text-align:center}.productCard__buyWrapper{display:flex;justify-content:end}.productCard__date{text-align:start;font-weight:300}.dialog{margin:auto auto;padding:50px;border-radius:20px}.dialog__form{display:flex;flex-direction:column;row-gap:20px}.dialog__title{font-size:50px}.dialog__dataWrapper{font-size:20px}.dialog__data{font-weight:600}.dialog__inputWrapper{display:flex;flex-direction:column;row-gap:10px}.dialog__input{font-weight:600}.dialog__actionsWrapper{display:flex;-moz-column-gap:20px;column-gap:20px;justify-content:end}.dialog::backdrop{background-color:rgba(17,16,20,.671);-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px)}.footer__container{max-width:1200px;margin:0 auto}@keyframes scaleAnimation{0%{transform:scale(1)}50%{transform:scale(1.1)}100%{transform:scale(1)}}
+@import url(./src/styles/reset.scss);
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+html {
+  font-family: "Raleway", sans-serif;
+  color: #3f3b38;
+  scroll-behavior: smooth;
+  line-height: 1.5;
+  font-style: normal;
+}
+
+.page {
+  background-color: #fff9ed;
+  position: relative;
+}
+.page__main {
+  height: 100vh;
+}
+.page__main:before {
+  content: " ";
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  filter: brightness(1.2) contrast(80%);
+  background-image: url("./src/assets/images/interior.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+.page__header {
+  position: fixed;
+  z-index: 20;
+}
+.header {
+  display: block;
+  font-weight: 500;
+  width: 100%;
+  padding: 10px 0;
+  font-size: 20px;
+  -webkit-backdrop-filter: blur(20px);
+          backdrop-filter: blur(20px);
+  background-color: rgba(255, 255, 255, 0.5);
+  font-family: "Playfair Display", serif;
+  box-shadow: rgba(73, 56, 61, 0.144) 0px 8px 24px;
+}
+.header__container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 15px;
+  display: flex;
+  box-sizing: content-box;
+}
+.header__logo {
+  margin-right: 40px;
+}
+.header__nav {
+  flex: 1 1 auto;
+}
+.logo {
+  color: #3f3b38;
+  font-family: "Playfair Display", serif;
+  font-weight: 700;
+}
+
+.toggler {
+  display: flex;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
+  align-items: center;
+}
+.toggler__checkbox {
+  opacity: 0;
+  position: absolute;
+}
+.toggler__checkbox:checked + .toggler__label .toggler__button {
+  transform: translateX(24px);
+}
+.toggler__label {
+  box-shadow: #3f3b38 0px 0px 0px 2px;
+  border-radius: 50px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 5px;
+  position: relative;
+  height: 26px;
+  width: 50px;
+}
+.toggler__button {
+  background-color: #3f3b38;
+  border-radius: 50%;
+  position: absolute;
+  top: 2px;
+  left: 2px;
+  height: 22px;
+  width: 22px;
+  transform: translateX(0px);
+  transition: transform 0.2s linear;
+}
+.toggler__icon {
+  font-size: 15px;
+}
+
+.nav {
+  display: flex;
+  align-items: center;
+  font-size: 18px;
+  font-family: "Raleway", sans-serif;
+}
+.nav__link {
+  padding: 5px;
+}
+.nav__link:not(:last-child) {
+  margin-right: 20px;
+}
+
+.main {
+  position: relative;
+}
+.main__container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 150px 15px;
+  box-sizing: content-box;
+}
+.main__titleWrapper {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.main__slogan {
+  max-width: 800px;
+  font-size: calc((1vh + 1vw) * 3);
+  font-weight: 500;
+  font-family: "Playfair Display", serif;
+  text-align: center;
+}
+.main__button {
+  max-width: 250px;
+  margin-top: 40px;
+  animation: scaleAnimation ease-in-out 2s infinite;
+}
+
+.button {
+  display: block;
+  text-align: center;
+  border-radius: 40px;
+  color: #fff9ed;
+  font-family: "Raleway", sans-serif;
+  font-size: 20px;
+  font-weight: 600;
+  cursor: pointer;
+  transition: all ease-out 0.2s;
+  background-color: #cc9065;
+}
+.button:hover {
+  background-color: #bf743f;
+}
+.button:active {
+  transform: scale(1.1);
+}
+.button-small {
+  padding: 10px 30px;
+}
+.button-large {
+  padding: 20px 30px;
+}
+
+.section {
+  padding: 50px 0;
+  text-align: center;
+}
+.section__container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 15px;
+  box-sizing: content-box;
+}
+.section__title {
+  font-size: 50px;
+  margin: 30px 0;
+}
+.section__paragraph {
+  font-size: 25px;
+  margin: 10px 0;
+  font-weight: 300;
+}
+.section__sofas {
+  background-color: rgba(124, 170, 201, 0.418);
+}
+.section__tables {
+  background-color: rgba(255, 162, 162, 0.372);
+}
+.section__chairs {
+  background-color: rgba(255, 227, 134, 0.418);
+}
+.section__accessories {
+  background-color: rgba(167, 224, 118, 0.418);
+}
+
+.products__title {
+  font-size: 35px;
+  text-align: center;
+  margin: 20px 0;
+}
+.products__list {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  flex-wrap: wrap;
+  row-gap: 10px;
+  -moz-column-gap: 10px;
+       column-gap: 10px;
+}
+.productCard {
+  position: relative;
+  width: 230px;
+  background-color: #ffffff;
+  padding: 20px;
+  border-radius: 20px;
+  box-shadow: rgba(73, 56, 61, 0.144) 0px 8px 24px;
+}
+.productCard:hover .productCard__image {
+  transform: scale(1.15);
+}
+.productCard__wrapper {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  row-gap: 10px;
+}
+.productCard__imageWrapper {
+  overflow: hidden;
+}
+.productCard__image {
+  transition: transform 0.2s;
+  border-radius: 10px;
+}
+.productCard__title {
+  font-size: 20px;
+  font-weight: 500;
+  text-align: center;
+}
+.productCard__buyWrapper {
+  display: flex;
+  justify-content: end;
+}
+.productCard__date {
+  text-align: start;
+  font-weight: 300;
+}
+
+.dialog {
+  margin: auto auto;
+  padding: 30px 50px;
+  border-radius: 20px;
+}
+.dialog__form {
+  display: flex;
+  flex-direction: column;
+  row-gap: 10px;
+  font-size: 20px;
+}
+.dialog__title {
+  font-size: 50px;
+}
+.dialog__data {
+  font-weight: 600;
+}
+.dialog__inputWrapper {
+  display: flex;
+  flex-direction: column;
+  row-gap: 10px;
+}
+.dialog__input {
+  font-weight: 600;
+}
+.dialog__actionsWrapper {
+  display: flex;
+  -moz-column-gap: 20px;
+       column-gap: 20px;
+  justify-content: end;
+}
+.dialog::backdrop {
+  background-color: rgba(17, 16, 20, 0.671);
+  -webkit-backdrop-filter: blur(5px);
+          backdrop-filter: blur(5px);
+}
+
+.footer__container {
+  position: relative;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 50px 0;
+  display: flex;
+  align-items: center;
+}
+.footer__column {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.footer__nav {
+  width: 45%;
+}
+.footer__icon {
+  width: 10%;
+  opacity: 0.5;
+}
+.footer__contactWrapper {
+  width: 45%;
+  font-weight: 600;
+}
+.footer__contact:not(:last-child) {
+  margin-bottom: 10px;
+}
+
+@keyframes scaleAnimation {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.1);
+  }
+  100% {
+    transform: scale(1);
+  }
+}/*# sourceMappingURL=index.css.map */
