--- a/index.scss
+++ b/index.scss
@@ -1,13 +1,13 @@
 @import url(./src/styles/reset.scss);
 
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 // main vars
 $container-width: 1200px;
 
 // font vars
-$primary-font-family: 'Raleway', sans-serif;
-$secondary-font-family: 'Playfair Display', serif;
+$primary-font-family: "Raleway", sans-serif;
+$secondary-font-family: "Playfair Display", serif;
 
 $font-weight-regular: 400;
 $font-weight-medium: 500;
@@ -15,11 +15,10 @@ $font-weight-semiBold: 600;
 $font-weight-bold: 700;
 
 // color vars
-$color-brown: #3F3B38;
-$color-orange: #CC9065;
-$color-white: #FFFFFF;
-$color-floral-white: #FFF9ED;
-
+$color-brown: #3f3b38;
+$color-orange: #cc9065;
+$color-white: #ffffff;
+$color-floral-white: #fff9ed;
 
 // theme vars
 $dark-text-color: $color-brown;
@@ -40,11 +39,21 @@ $shadow: rgba(73, 56, 61, 0.144) 0px 8px 24px;
   align-items: center;
 }
 
+@mixin noselect {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
 html {
   font-family: $primary-font-family;
   color: $dark-text-color;
   scroll-behavior: smooth;
   line-height: 1.5;
+  font-style: normal;
 }
 
 .page {
@@ -55,7 +64,7 @@ html {
     height: 100vh;
 
     &:before {
-      content: ' ';
+      content: " ";
       display: block;
       position: absolute;
       left: 0;
@@ -63,7 +72,7 @@ html {
       width: 100%;
       height: 100%;
       filter: brightness(1.2) contrast(80%);
-      background-image: url('./src/assets/images/interior.jpg');
+      background-image: url("./src/assets/images/interior.jpg");
       background-repeat: no-repeat;
       background-size: cover;
       background-position: center;
@@ -82,32 +91,90 @@ html {
   font-weight: 500;
   width: 100%;
   padding: 10px 0;
-  font-size: 30px;
+  font-size: 20px;
   backdrop-filter: blur(20px);
   background-color: rgba($color-white, 0.5);
   font-family: $secondary-font-family;
   box-shadow: $shadow;
-  
+
   &__container {
     max-width: $container-width;
     margin: 0 auto;
     padding: 0 15px;
+    display: flex;
     box-sizing: content-box;
   }
 
+  &__logo {
+    margin-right: 40px;
+  }
+
   &__nav {
+    flex: 1 1 auto;
+  }
+
+  &__toggler {
+  }
+}
+
+.logo {
+  color: $color-brown;
+  font-family: $secondary-font-family;
+  font-weight: 700;
+}
+
+.toggler {
+  display: flex;
+  @include noselect;
+  align-items: center;
+
+  &__checkbox {
+    opacity: 0;
+    position: absolute;
+  }
+
+  &__checkbox:checked + &__label &__button {
+    transform: translateX(24px);
+  }
+
+  &__label {
+    box-shadow: $dark-background-color 0px 0px 0px 2px;
+    border-radius: 50px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 5px;
+    position: relative;
+    height: 26px;
+    width: 50px;
+  }
+
+  &__button {
+    background-color: $dark-background-color;
+    border-radius: 50%;
+    position: absolute;
+    top: 2px;
+    left: 2px;
+    height: 22px;
+    width: 22px;
+    transform: translateX(0px);
+    transition: transform 0.2s linear;
+  }
+
+  &__icon {
+    font-size: 15px;
   }
 }
 
 .nav {
   display: flex;
-  justify-content: space-between;
+  align-items: center;
+  font-size: 18px;
+  font-family: $primary-font-family;
 
-  &__logo {
-    font-style: italic;
-    margin-right: 40px;
-  }
   &__link {
+    padding: 5px;
     &:not(:last-child) {
       margin-right: 20px;
     }
@@ -155,7 +222,7 @@ html {
   border-radius: 40px;
   color: $light-text-color;
 
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
   font-size: 20px;
   font-weight: 600;
 
@@ -204,13 +271,16 @@ html {
   }
 
   &__sofas {
-    background-color: rgba(73, 134, 175, 0.418);
+    background-color: rgba(124, 170, 201, 0.418);
   }
   &__tables {
-    background-color: rgba(197, 133, 133, 0.418);
+    background-color: rgba(255, 162, 162, 0.372);
   }
   &__chairs {
-    background-color: rgba(224, 200, 118, 0.418);
+    background-color: rgba(255, 227, 134, 0.418);
+  }
+  &__accessories {
+    background-color: rgba(167, 224, 118, 0.418);
   }
 }
 
@@ -280,13 +350,14 @@ html {
 
 .dialog {
   margin: auto auto;
-  padding: 50px;
+  padding: 30px 50px;
   border-radius: 20px;
 
   &__form {
     display: flex;
     flex-direction: column;
-    row-gap: 20px;
+    row-gap: 10px;
+    font-size: 20px;
   }
 
   &__title {
@@ -294,7 +365,6 @@ html {
   }
 
   &__dataWrapper {
-    font-size: 20px;
   }
   &__label {
   }
@@ -325,13 +395,38 @@ html {
 
 .footer {
   &__container {
+    position: relative;
     max-width: $container-width;
     margin: 0 auto;
+    padding: 50px 0;
+    display: flex;
+    align-items: center;
   }
+
+  &__column {
+    @include flexCenter;
+  }
+
   &__nav {
+    width: 45%;
+  }
+
+  &__icon {
+    width: 10%;
+    opacity: 0.5;
+  }
+
+  &__contactWrapper {
+    width: 45%;
+    font-weight: 600;
+  }
+
+  &__contact {
+    &:not(:last-child) {
+      margin-bottom: 10px;
+    }
   }
 }
-
 
 @keyframes scaleAnimation {
   0% {
