--- a/index.css
+++ b/index.css
@@ -8,44 +8,38 @@ html {
   scroll-behavior: smooth;
 }
 
-.page {
-  position: relative;
-  background-color: #fff9ed;
-  transition: background 0.2s;
-}
-.page__header {
-  position: fixed;
-  z-index: 20;
-}
-
-.header {
-  display: block;
-  width: 100%;
-  padding: 10px 0;
-  font-weight: 500;
-  -webkit-backdrop-filter: blur(20px);
-          backdrop-filter: blur(20px);
-  background-color: rgba(255, 255, 255, 0.5);
-  box-shadow: rgba(73, 56, 61, 0.144) 0px 8px 24px;
-  transition: background 0.2s;
-}
-.header__container {
-  display: flex;
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 0 15px;
-  box-sizing: content-box;
-}
-.header__logo {
-  margin-right: 40px;
-}
-.header__nav {
-  flex: 1 1 auto;
-}
 .logo {
   font-family: "Playfair Display", serif;
   font-weight: 700;
   font-size: 20px;
+}
+
+.button {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
+  display: block;
+  text-align: center;
+  border-radius: 40px;
+  color: #fff9ed;
+  font-size: 20px;
+  font-weight: 600;
+  cursor: pointer;
+  transition: all ease-out 0.2s;
+  background-color: #cc9065;
+}
+.button:hover {
+  background-color: #bf743f;
+}
+.button:active {
+  transform: scale(1.1);
+}
+.button-small {
+  padding: 10px 30px;
+}
+.button-large {
+  padding: 20px 30px;
 }
 
 .toggler {
@@ -91,6 +85,99 @@ html {
   font-size: 18px;
 }
 
+.radioButton__input {
+  position: absolute;
+  opacity: 0;
+}
+.radioButton__input:checked + .radioButton__label {
+  border: 2px solid rgba(63, 59, 56, 0.8);
+}
+.radioButton__label {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  padding: 2px;
+  border: 2px solid rgba(63, 59, 56, 0.2);
+  border-radius: 100%;
+  width: 40px;
+  height: 40px;
+  transition: border 0.2s;
+}
+.radioButton__label::before {
+  content: " ";
+  display: inline-block;
+  border-radius: 100%;
+  width: 100%;
+  height: 100%;
+}
+.radioButton__label-salmon::before {
+  background-color: #fa8072;
+}
+.radioButton__label-teal::before {
+  background-color: #008080;
+}
+.radioButton__label-rajah::before {
+  background-color: #efb960;
+}
+.radioButton__label-selena::before {
+  background-color: #8f979d;
+}
+
+.input {
+  padding: 10px;
+  border: 2px solid rgba(63, 59, 56, 0.2);
+  border-radius: 10px;
+}
+.input:focus {
+  border: 2px solid rgba(63, 59, 56, 0.5);
+}
+
+.textarea {
+  padding: 10px;
+  border: 2px solid rgba(63, 59, 56, 0.2);
+  border-radius: 10px;
+  resize: none;
+}
+.textarea:focus {
+  border: 2px solid rgba(63, 59, 56, 0.5);
+}
+
+.page {
+  position: relative;
+  background-color: #fff9ed;
+  transition: background 0.2s;
+}
+.page__header {
+  position: fixed;
+  z-index: 20;
+}
+
+.header {
+  display: block;
+  width: 100%;
+  padding: 10px 0;
+  font-weight: 500;
+  -webkit-backdrop-filter: blur(20px);
+          backdrop-filter: blur(20px);
+  background-color: rgba(255, 255, 255, 0.5);
+  box-shadow: rgba(73, 56, 61, 0.144) 0px 8px 24px;
+  transition: background 0.2s;
+}
+.header__container {
+  display: flex;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 15px;
+  box-sizing: content-box;
+}
+.header__logo {
+  margin-right: 40px;
+}
+.header__nav {
+  flex: 1 1 auto;
+}
+
 .nav {
   display: flex;
   align-items: center;
@@ -115,7 +202,7 @@ html {
   top: 0;
   width: 100%;
   height: 100%;
-  opacity: 0.5;
+  opacity: 0.7;
   background-image: url("./src/assets/images/interior.jpg");
   background-repeat: no-repeat;
   background-size: cover;
@@ -146,35 +233,6 @@ html {
   max-width: 250px;
   margin-top: 40px;
   animation: scaleAnimation ease-in-out 2s infinite;
-}
-
-.button {
-  -webkit-touch-callout: none;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  user-select: none;
-  display: block;
-  text-align: center;
-  border-radius: 40px;
-  color: #fff9ed;
-  font-family: "Raleway", sans-serif;
-  font-size: 20px;
-  font-weight: 600;
-  cursor: pointer;
-  transition: all ease-out 0.2s;
-  background-color: #cc9065;
-}
-.button:hover {
-  background-color: #bf743f;
-}
-.button:active {
-  transform: scale(1.1);
-}
-.button-small {
-  padding: 10px 30px;
-}
-.button-large {
-  padding: 20px 30px;
 }
 
 .section {
@@ -223,6 +281,7 @@ html {
   -moz-column-gap: 10px;
        column-gap: 10px;
 }
+
 .productCard {
   position: relative;
   width: 230px;
@@ -231,9 +290,6 @@ html {
   border-radius: 20px;
   box-shadow: rgba(73, 56, 61, 0.144) 0px 8px 24px;
   transition: background 0.2s;
-}
-.productCard:hover .productCard__image {
-  transform: scale(1.15);
 }
 .productCard__wrapper {
   height: 100%;
@@ -262,11 +318,15 @@ html {
   text-align: start;
   font-weight: 300;
 }
+.productCard:hover .productCard__image {
+  transform: scale(1.15);
+}
 
 .dialog {
   margin: auto auto;
   padding: 30px 50px;
   border-radius: 20px;
+  color: #3f3b38;
 }
 .dialog__form {
   display: flex;
@@ -276,14 +336,27 @@ html {
 }
 .dialog__title {
   font-size: 50px;
+  margin-bottom: 20px;
 }
-.dialog__data, .dialog__input, .dialog__textarea {
+.dialog__data {
   font-weight: 600;
 }
 .dialog__inputWrapper {
   display: flex;
+  -moz-column-gap: 10px;
+       column-gap: 10px;
+  align-items: center;
+  justify-content: space-between;
+}
+.dialog__textareaWrapper {
+  display: flex;
   flex-direction: column;
   row-gap: 10px;
+}
+.dialog__groupColor {
+  display: flex;
+  -moz-column-gap: 10px;
+       column-gap: 10px;
 }
 .dialog__actionsWrapper {
   display: flex;
@@ -323,6 +396,7 @@ html {
 }
 .footer__contactWrapper {
   width: 45%;
+  font-size: 18px;
   font-weight: 600;
 }
 .footer__contact:not(:last-child) {
