--- a/index.scss
+++ b/index.scss
@@ -1,46 +1,8 @@
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import "./src/styles/variables.scss";
 @import "./src/styles/mixins.scss";
 
-@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-
-// main vars
-$container-width: 1200px;
-$container-offset: 15px;
-
-// font vars
-$primary-font-family: "Raleway", sans-serif;
-$secondary-font-family: "Playfair Display", serif;
-
-$font-weight-light: 300;
-$font-weight-regular: 400;
-$font-weight-medium: 500;
-$font-weight-semiBold: 600;
-$font-weight-bold: 700;
-
-$font-size-s : 18px;
-$font-size-m : 20px;
-$font-size-l : 25px;
-$font-size-xl : 30px;
-$font-size-xxl : 50px;
-
-// color vars
-$color-brown: #3f3b38;
-$color-orange: #cc9065;
-$color-white: #ffffff;
-$color-floral-white: #fff9ed;
-
-// theme vars
-$dark-text-color: $color-brown;
-$light-background-color: $color-floral-white;
-
-$light-text-color: $color-floral-white;
-$dark-background-color: $color-brown;
-
-// button color
-$background-color-orange: $color-orange;
-$background-color-brown: $color-brown;
-
-$shadow: rgba(73, 56, 61, 0.144) 0px 8px 24px;
-
+// ---------- main styles ---------- //
 html {
   font-family: $primary-font-family;
   font-weight: $font-weight-regular;
@@ -50,56 +12,44 @@ html {
   scroll-behavior: smooth;
 }
 
-// ---------- page ---------- //
-.page {
-  position: relative;
-  background-color: $light-background-color;
-  transition:background 0.2s;
-
-  &__header {
-    position: fixed;
-    z-index: 20;
-  }
-}
-
-// ---------- header ---------- //
-.header {
-  display: block;
-  width: 100%;
-  padding: 10px 0;
-
-  font-weight: $font-weight-medium;
-
-  backdrop-filter: blur(20px);
-  background-color: rgba($color-white, 0.5);
-  box-shadow: $shadow;
-  transition: background 0.2s;
-
-  &__container {
-    display: flex;
-    max-width: $container-width;
-    margin: 0 auto;
-
-    @include offsetContainer($container-offset);
-  }
-
-  &__logo {
-    margin-right: 40px;
-  }
-
-  &__nav {
-    flex: 1 1 auto;
-  }
-
-  &__toggler {
-  }
-}
-
+// ---------- UI styles ---------- //
 // ---------- logo ---------- //
 .logo {
   font-family: $secondary-font-family;
   font-weight: $font-weight-bold;
   font-size: $font-size-m;
+}
+// ---------- button ---------- //
+.button {
+  @include noselect;
+  display: block;
+  text-align: center;
+
+  border-radius: 40px;
+  color: $light-text-color;
+
+  font-size: $font-size-m;
+  font-weight: $font-weight-semiBold;
+
+  cursor: pointer;
+
+  transition: all ease-out 0.2s;
+  background-color: $background-color-orange;
+
+  &:hover {
+    background-color: darken($background-color-orange, 10%);
+  }
+
+  &:active {
+    transform: scale(1.1);
+  }
+
+  &-small {
+    padding: 10px 30px;
+  }
+  &-large {
+    padding: 20px 30px;
+  }
 }
 
 // ---------- theme toggler ---------- //
@@ -148,6 +98,118 @@ html {
   }
 }
 
+// ---------- radio button (color) ---------- //
+.radioButton {
+  &__input {
+    position: absolute;
+    opacity: 0;
+  }
+
+  &__input:checked + &__label {
+    border: $input-border-checked;
+  }
+
+  &__label {
+    @include flexCenter;
+    position: relative;
+    padding: 2px;
+    border: $input-border;
+    border-radius: 100%;
+    width: 40px;
+    height: 40px;
+    transition: border 0.2s;
+
+    &::before {
+      content: " ";
+      display: inline-block;
+      border-radius: 100%;
+      width: 100%;
+      height: 100%;
+    }
+
+    &-salmon::before {
+      background-color: $color-salmon;
+    }
+
+    &-teal::before {
+      background-color: $color-teal;
+    }
+
+    &-rajah::before {
+      background-color: $color-rajah;
+    }
+    &-selena::before {
+      background-color: $color-selena;
+    }
+  }
+}
+
+// ---------- input ---------- //
+.input {
+  padding: 10px;
+  border: $input-border;
+  border-radius: 10px;
+
+  &:focus {
+    border: $input-border-focus;
+  }
+}
+
+// ---------- textarea ---------- //
+.textarea {
+  padding: 10px;
+  border: $input-border;
+  border-radius: 10px;
+  resize: none;
+
+  &:focus {
+    border: $input-border-focus;
+  }
+}
+
+// ---------- Page styles ---------- //
+// ---------- page ---------- //
+.page {
+  position: relative;
+  background-color: $light-background-color;
+  transition: background 0.2s;
+
+  &__header {
+    position: fixed;
+    z-index: 20;
+  }
+}
+
+// ---------- header ---------- //
+.header {
+  display: block;
+  width: 100%;
+  padding: 10px 0;
+
+  font-weight: $font-weight-medium;
+
+  backdrop-filter: blur(20px);
+  background-color: rgba($color-white, 0.5);
+  box-shadow: $shadow;
+  transition: background 0.2s;
+
+  &__container {
+    display: flex;
+    max-width: $container-width;
+    margin: 0 auto;
+
+    @include offsetContainer($container-offset);
+  }
+
+  &__logo {
+    margin-right: 40px;
+  }
+
+  &__nav {
+    flex: 1 1 auto;
+  }
+}
+
 // ---------- nav list ---------- //
 .nav {
   display: flex;
@@ -177,8 +239,7 @@ html {
     width: 100%;
     height: 100%;
 
-    // filter: brightness(1.2) contrast(70%);
-    opacity: 0.5;
+    opacity: 0.7;
     background-image: url("./src/assets/images/interior.jpg");
     background-repeat: no-repeat;
     background-size: cover;
@@ -215,40 +276,6 @@ html {
   }
 }
 
-// ---------- button ---------- //
-.button {
-  @include noselect;
-  display: block;
-  text-align: center;
-
-  border-radius: 40px;
-  color: $light-text-color;
-
-  font-family: "Raleway", sans-serif;
-  font-size: $font-size-m;
-  font-weight: $font-weight-semiBold;
-
-  cursor: pointer;
-
-  transition: all ease-out 0.2s;
-  background-color: $background-color-orange;
-
-  &:hover {
-    background-color: darken($background-color-orange, 10%);
-  }
-
-  &:active {
-    transform: scale(1.1);
-  }
-
-  &-small {
-    padding: 10px 30px;
-  }
-  &-large {
-    padding: 20px 30px;
-  }
-}
-
 // ---------- content section ---------- //
 .section {
   padding: 50px 0;
@@ -258,8 +285,6 @@ html {
     max-width: $container-width;
     margin: 0 auto;
     @include offsetContainer($container-offset);
-  }
-  &__products {
   }
 
   &__title {
@@ -301,8 +326,6 @@ html {
     row-gap: 10px;
     column-gap: 10px;
   }
-  &__item {
-  }
 }
 
 // ---------- product card ---------- //
@@ -314,10 +337,6 @@ html {
   border-radius: 20px;
   box-shadow: $shadow;
   transition: background 0.2s;
-
-  &:hover &__image {
-    transform: scale(1.15);
-  }
 
   &__wrapper {
     height: 100%;
@@ -351,6 +370,10 @@ html {
     text-align: start;
     font-weight: $font-weight-light;
   }
+
+  &:hover &__image {
+    transform: scale(1.15);
+  }
 }
 
 // ---------- dialog prchase element ---------- //
@@ -358,6 +381,7 @@ html {
   margin: auto auto;
   padding: 30px 50px;
   border-radius: 20px;
+  color: $dark-text-color;
 
   &__form {
     display: flex;
@@ -368,21 +392,29 @@ html {
 
   &__title {
     font-size: $font-size-xxl;
+    margin-bottom: 20px;
   }
 
-  &__dataWrapper {
-  }
-  &__label {
-  }
-  &__data,
-  &__input,
-  &__textarea {
+  &__data {
     font-weight: $font-weight-semiBold;
   }
+
   &__inputWrapper {
+    display: flex;
+    column-gap: 10px;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  &__textareaWrapper {
     display: flex;
     flex-direction: column;
     row-gap: 10px;
+  }
+
+  &__groupColor {
+    display: flex;
+    column-gap: 10px;
   }
 
   &__actionsWrapper {
@@ -427,6 +459,7 @@ html {
 
   &__contactWrapper {
     width: 45%;
+    font-size: $font-size-s;
     font-weight: $font-weight-semiBold;
   }
 
@@ -437,7 +470,7 @@ html {
   }
 }
 
-// ---------- dark theme  ---------- // 
+// ---------- dark theme  ---------- //
 [data-dark="true"] {
   .page {
     background-color: $dark-background-color;
@@ -470,19 +503,3 @@ html {
     transform: scale(1);
   }
 }
-
-// @media (prefers-color-scheme: dark) {
-//   .page {
-//     background: #753;
-//     color: #dcb;
-//     outline: 5px dashed #000;
-//   }
-// }
-
-// @media (prefers-color-scheme: light) {
-//   .page {
-//     background: rgb(255, 128, 0);
-//     color: rgb(0, 0, 0);
-//     outline: 5px dashed #000;
-//   }
-// }
