--- a/index.css
+++ b/index.css
@@ -143,6 +143,47 @@ html {
   border: 2px solid rgba(63, 59, 56, 0.5);
 }
 
+.burger__toggle {
+  opacity: 0;
+  position: absolute;
+}
+.burger__toggle:checked + .burger__button > span {
+  transform: rotate(45deg);
+}
+.burger__toggle:checked + .burger__button > span::before {
+  top: 0;
+  transform: rotate(0deg);
+}
+.burger__toggle:checked + .burger__button > span::after {
+  top: 0;
+  transform: rotate(90deg);
+}
+.burger__button {
+  position: fixed;
+  top: 22px;
+  right: 22px;
+  width: 26px;
+  height: 26px;
+  cursor: pointer;
+  z-index: 25;
+}
+.burger__button > span, .burger__button > span::before, .burger__button > span::after {
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  transition-duration: 0.25s;
+  background-color: #3f3b38;
+}
+.burger__button > span::before {
+  content: "";
+  top: -8px;
+}
+.burger__button > span::after {
+  content: "";
+  top: 8px;
+}
+
 .page {
   position: relative;
   background-color: #fff9ed;
@@ -165,14 +206,18 @@ html {
   transition: background 0.2s;
 }
 .header__container {
-  display: flex;
   max-width: 1200px;
   margin: 0 auto;
   padding: 0 15px;
   box-sizing: content-box;
 }
+.header__wrapper {
+  display: flex;
+}
 .header__logo {
+  position: relative;
   margin-right: 40px;
+  z-index: 20;
 }
 .header__nav {
   flex: 1 1 auto;
@@ -210,13 +255,14 @@ html {
 }
 .main__container {
   max-width: 1200px;
+  height: 100%;
   margin: 0 auto;
   padding: 0 15px;
   box-sizing: content-box;
 }
 .main__titleWrapper {
   position: relative;
-  padding-top: 8%;
+  padding-top: 100px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -379,23 +425,21 @@ html {
 }
 .footer__wrapper {
   display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
   align-items: center;
+  row-gap: 20px;
+  -moz-column-gap: 20px;
+       column-gap: 20px;
   padding: 50px 0;
 }
 .footer__column {
   display: flex;
   justify-content: center;
   align-items: center;
-}
-.footer__nav {
-  width: 45%;
-}
-.footer__icon {
-  width: 10%;
-  opacity: 0.5;
+  flex-grow: 1;
 }
 .footer__contactWrapper {
-  width: 45%;
   font-size: 18px;
   font-weight: 600;
 }
@@ -413,6 +457,14 @@ html {
 [data-dark=true] .header {
   background-color: rgba(63, 59, 56, 0.7);
 }
+[data-dark=true] .burger__toggle:checked ~ .header__wrapper {
+  background-color: #3f3b38;
+}
+[data-dark=true] .burger__button > span,
+[data-dark=true] .burger__button > span::before,
+[data-dark=true] .burger__button > span::after {
+  background-color: #fff9ed;
+}
 [data-dark=true] .toggler__label {
   box-shadow: #fff9ed 0px 0px 0px 2px;
 }
@@ -420,6 +472,43 @@ html {
   background-color: #fff9ed;
 }
 
+@media only screen and (max-width: 700px) {
+  .burger__toggle:checked ~ .header__wrapper {
+    display: flex;
+    flex-direction: column;
+    row-gap: 20px;
+  }
+  .header__wrapper {
+    display: none;
+    position: absolute;
+    padding-top: 70px;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    width: 100vw;
+    height: 100vh;
+    z-index: 10;
+    background-color: #fff9ed;
+  }
+  .header__nav {
+    flex-grow: 0;
+    flex-direction: column;
+  }
+  .header__toggler {
+    justify-content: center;
+  }
+  .main::before {
+    opacity: 0.2;
+    background-position: 0 50%;
+  }
+  .main__titleWrapper {
+    height: 100%;
+  }
+  .section__title {
+    font-size: 30px;
+  }
+}
 @keyframes scaleAnimation {
   0% {
     transform: scale(1);
