--- a/index.css
+++ b/index.css
@@ -159,6 +159,7 @@ html {
   transform: rotate(90deg);
 }
 .burger__button {
+  display: none;
   position: fixed;
   top: 22px;
   right: 22px;
@@ -182,6 +183,28 @@ html {
 .burger__button > span::after {
   content: "";
   top: 8px;
+}
+
+.scrollToTop {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: #fff9ed;
+  color: #3f3b38;
+  text-align: center;
+  vertical-align: middle;
+  line-height: 40px;
+  font-size: 20px;
+  cursor: pointer;
+  z-index: 100;
+  box-shadow: rgba(73, 56, 61, 0.144) 0px 8px 24px;
+}
+.scrollToTop-show {
+  display: block;
 }
 
 .page {
@@ -208,11 +231,14 @@ html {
 .header__container {
   max-width: 1200px;
   margin: 0 auto;
+  display: flex;
+  align-items: center;
   padding: 0 15px;
   box-sizing: content-box;
 }
 .header__wrapper {
   display: flex;
+  flex-grow: 1;
 }
 .header__logo {
   position: relative;
@@ -247,7 +273,7 @@ html {
   top: 0;
   width: 100%;
   height: 100%;
-  opacity: 0.7;
+  opacity: 0.8;
   background-image: url("./src/assets/images/interior.jpg");
   background-repeat: no-repeat;
   background-size: cover;
@@ -452,7 +478,7 @@ html {
   color: #fff9ed;
 }
 [data-dark=true] .productCard {
-  background-color: rgba(63, 59, 56, 0.8);
+  background-color: rgba(63, 59, 56, 0.7);
 }
 [data-dark=true] .header {
   background-color: rgba(63, 59, 56, 0.7);
@@ -473,6 +499,9 @@ html {
 }
 
 @media only screen and (max-width: 700px) {
+  .header .burger__button {
+    display: block;
+  }
   .burger__toggle:checked ~ .header__wrapper {
     display: flex;
     flex-direction: column;
