--- a/index.scss
+++ b/index.scss
@@ -185,6 +185,7 @@ html {
     transform: rotate(90deg);
   }
   &__button {
+    display: none;
     position: fixed;
     top: 22px;
     right: 22px;
@@ -210,6 +211,30 @@ html {
   &__button > span::after {
     content: "";
     top: 8px;
+  }
+}
+
+// scroll to top arrow
+.scrollToTop {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: $light-background-color;
+  color: $dark-text-color;
+  text-align: center;
+  vertical-align: middle;
+  line-height: 40px;
+  font-size: $font-size-m;
+  cursor: pointer;
+  z-index: 100;
+  box-shadow: $shadow;
+
+  &-show {
+    display: block;
   }
 }
 
@@ -243,11 +268,15 @@ html {
     max-width: $container-width;
     margin: 0 auto;
 
+    display: flex;
+    align-items: center;
+
     @include offsetContainer($container-offset);
   }
 
   &__wrapper {
     display: flex;
+    flex-grow: 1;
   }
 
   &__logo {
@@ -290,7 +319,7 @@ html {
     width: 100%;
     height: 100%;
 
-    opacity: 0.7;
+    opacity: 0.8;
     background-image: url("./src/assets/images/interior.jpg");
     background-repeat: no-repeat;
     background-size: cover;
@@ -525,7 +554,7 @@ html {
   }
 
   .productCard {
-    background-color: rgba($dark-background-color, 0.8);
+    background-color: rgba($dark-background-color, 0.7);
   }
 
   .header {
@@ -555,6 +584,9 @@ html {
 // tablet and mobile screen
 @media only screen and (max-width: 700px) {
   .header {
+    .burger__button {
+      display: block;
+    }
     .burger__toggle:checked ~ &__wrapper {
       display: flex;
       flex-direction: column;
