--- a/index.css
+++ b/index.css
@@ -537,6 +537,19 @@ html {
   .section__title {
     font-size: 30px;
   }
+  .dialog {
+    padding: 10px;
+  }
+  .dialog__title {
+    font-size: 30px;
+  }
+  .dialog__inputWrapper {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .footer {
+    text-align: center;
+  }
 }
 @keyframes scaleAnimation {
   0% {
